# vietnamese-graph-rag

./: .gitignore  KE_HOACH_NHOM.md  Makefile  README.md  config.yaml  download_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  experiments_ui.py
notebooks/: gpu_finetune_improvements.ipynb  kaggle_part1_embedding_ner.ipynb  kaggle_part2_graph_rag.ipynb  kaggle_part3_finetune_phobert.ipynb  module2_embedding.ipynb  module4_knowledge_graph.ipynb
report/: NLP_Final_Report.tex
scripts/: analyze_kg.py  benchmark.py  build_kg_only.py  build_nb_gpu_finetune.py  build_nb_part1.py  build_nb_part2.py  demo_rag.py  eval_baseline_random.py  eval_devtest_split.py  eval_embeddings.py  eval_embeddings_full.py  eval_grounding.py  eval_lexical_gap.py  eval_ner.py  eval_rag_modes.py  make_report_figs.py  shot_dashboard.py  shot_demo.py  test_api.py  viz_kg.py
src/vngraphrag/: config.py
src/vngraphrag/cli/: build_index.py  evaluate.py  import_artifacts.py  train_aspect.py  tune_weights.py
src/vngraphrag/core/: __init__.py  aspect_clf.py  data.py  kg.py
src/vngraphrag/rag/: generate.py  pipeline.py  retrieval.py
tests/: test_data.py  test_generate.py  test_generation_live.py  test_kg.py  test_retrieval.py
